Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96114

[Reg : 5.12.4 -> ] ActiveX widget not rendering on secondary screen when System-DPI Aware is combined with high DPI scaling

XMLWordPrintable

    • Windows
    • dedb29cf23959741593b2fa1481f210cd663cafb (qt/qtbase/dev) 47ba0a465e93946df3ad6f0f39fe15a4da683b0d (qt/qtbase/6.2)

      This is a regression bug that happened between 5.12.4 (correct) and 5.12.5 (wrong)

      In the following configuration, everything works fine when creating a QAxWidget on a main display. However, when you move the app window to the secondary
      screen and then create the QAxWidget, it does not render at all.

          SetProcessDPIAware();   //make System-DPI Aware
          QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
          QCoreApplication::setAttribute(Qt::AA_UseHighDpiPixmaps);
          QCoreApplication::setAttribute(Qt::AA_DontCreateNativeWidgetSiblings);
      

      How to reproduce
      0. You need two displays and one should be 150% scaling for the Qt High DPI scaling to kick in.
      1. Use Qtbug96114.zip
      2. Press "create Ax Widget" button in the main display -> Qt Ax widget is created and WMP is shown
      3. Move the window to the second display
      4. Press "create Ax Widget" button

      Expected result : Qt Ax widget is rendered
      Actual result : Qt Ax widget is not rendered

        1. qtbug96114.zip
          3 kB
          Friedemann Kleint
        2. Qtbug96114.zip
          2 kB
          Nahomi Gröhn
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes